--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run almeriajs:serve-ssr",
+    "serve:ssr": "node dist/almeriajs/server/main.js",
+    "build:ssr": "ng build --prod && ng run almeriajs:server:production",
+    "prerender": "ng run almeriajs:prerender"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +25,11 @@
     "@angular/material": "^9.2.0",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
+    "@angular/platform-server": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@nguniversal/express-engine": "^9.1.0",
     "core-js": "^2.5.4",
+    "express": "^4.15.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -32,6 +39,8 @@
     "@angular/cli": "~9.1.1",
     "@angular/compiler-cli": "~9.1.1",
     "@angular/language-service": "~9.1.1",
+    "@nguniversal/builders": "^9.1.0",
+    "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
